<resources>
    <string name="app_name">FineDriver</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Електронна пошта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Зареєструватись</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_meny">FullscreenActivity</string>
    <string name="Registration">Зареєструватись за допомогою...</string>
    <string name="or">або</string>

    <!-- Strings related to main menu -->
    <string name="hello_blank_fragment">Зразок</string>
    <string name="map_text">Мапа</string>
    <string name="fines_text">Штрафи</string>
    <string name="camera_text">Перелік відеокамер</string>
    <string name="message_text">Повідомлення</string>
    <string name="profile_text">Профіль користувача</string>
    <string name="settings">Налаштування додатку</string>
    <string name="exit_text">Вихід</string>


    <!-- Strings related to sevice -->
    <string name="remove_location_updates">Припинити відстеження</string>


    <!-- Strings related to map -->
    <string name="map_speed_text">Ваша швидкість:</string>
    <string name="map_search">Пошук</string>
    <string name="map_meters"> м</string>
    <string name="map_speed_limit">   Обмеження: </string>
    <string name="map_km_h">   Обмеження: </string>

    <string name="base_url">https://maps.googleapis.com</string>

    <!-- Strings related to push -->
    <string name="cameraString">Камера</string>
    <string name="pushMessageString">Обмеження:</string>
    <!-- Strings related to fine -->
    <string name="fine_not_paid_text">СПЛАТИТИ ШТРАФ</string>
    <string name="fine_paid_text">СУМА ШТРАФУ</string>
    <string name="fines_data_labeel">Дата:</string>
    <string name="fines_car_model">Марка авто:</string>
    <string name="fines_car_number">Номерний знак:</string>
    <string name="fines_status_bad">НЕ СПЛАЧЕНО</string>
    <string name="fines_status_ok">СПЛАЧЕНО</string>
    <string name="finesDescription">Перевищення встановлених обмежень руху, проїзд на забороненний сигнал регулювання</string>
    <!-- Strings related to fines list -->
    <string name="fines_list_head_text">ШТРАФИ</string>
    <string name="driverLicence">ЕАВ/ 245686539</string>
    <string name="car_model">Moskvich 2141</string>
    <string name="fines_list_button">Пошук за реквізитами</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="settings_head_text">НАЛАШТУВАННЯ</string>
    <string name="message_settings_text">Повідомлення</string>
    <string name="camera_settings_text">Камери</string>
    <string name="fines_settings_text">Штрафи</string>
    <string name="reminders_settings_text">Нагадування</string>
    <string name="about_text">Про додаток</string>
    <string name="message_settings_head">ПОВІДОМЛЕННЯ</string>
    <string name="message_on_map">Повідомлення на мапі</string>
    <string name="voice_message_text">Голосові повідомлення</string>
    <string name="audio_warnings_text">Звукові попередження</string>
    <string name="push_message_text">Push - повідомлення</string>
    <string name="all_cameras_text">Відображати всі камери</string>
    <string name="camera_settings_head">КАМЕРИ</string>
    <string name="trucam_text">Відображати Trucam</string>
    <string name="on_way_camera_text">Відображати камери тільки по обраному муршруту</string>
    <string name="warning_radius_text">Радіус зони попередження</string>
    <string name="warning_radius_meter">700 м</string>
    <string name="fines_settings_head">Штрафи</string>
    <string name="inspection_frequency_text">Періодичність автоматичної перевірки штрафів</string>
    <string name="every_day">Раз на день</string>
    <string name="every_week">Раз на тиждень</string>
    <string name="every_month">Раз на місяць</string>
    <string name="every_year">Раз на рік</string>
    <string name="never">Не перевіряти</string>
</resources>